# 2.0.15
- meta: switch to nyc for coverage and set/enforce limits
- meta: add husky pre-commit test hook
- meta: bump deps
- fix: set _HF flag on atomics where missing
- fix: AsyncEventEmitter off() handler logic
- feature: add more tests to improve coverage
- AOHost: all internal AO events are now emit(ed) on the AO event emitter
- TWAP fix: allow exact match in price target verification
- TWAP fix: allow 0 cancel/submit delays
- TWAP fix: amount checking in tick handler
- TWAP fix: await updateState() in life:stop handler
- Ping/Pong fix: allow 0 cancel/submit delays
- MACrossover fix: add help text
- Iceberg refactor: no longer cancels atomics on exit, to match the other AOs
- AccumulateDistribute refactor: decrease catch-up delay to 200ms
- AccumulateDistribute fix: catch-up did not result in decreased delay
- AsyncEventEmitter: expand & improve functionality (added await())

# 2.0.14
- feature: AO host now cancels AO orders in snapshot before restoring on load

# 2.0.13
- feature: add AO host helper call traces to log output if DEBUG_TRACE

# 2.0.12
- fix: use relative paths to allow generic mocha execution

# 2.0.11
- meta: bump bitfinex-api-node to v4

# 2.0.10
- feature: add AOHost getAdapter()

# 2.0.9
- refactor: revert 2.0.8 nonce(), switch OCOCO onto internal cid gen
- feature: AO Host 'exec:stop' now supports onCleanup()
- refactor: error event handlers now have a pre-cleanup grace period

# 2.0.8
- refactor: use nonce() from bfx-api-node-util

# 2.0.7
- refactor: OCOCO now keeps 'ocoAction' and 'action' params
- feature: add reconnect() method to AO Host

# 2.0.6
- feature: OCOCO type

# 2.0.5
- feature: futures support

# 2.0.4
- fix: make order client ID always unique

# 2.0.3
- all order types: add uiIcon field to ui definitions

# 2.0.2
- docs: create/update

# 2.0.1
- manifest: bump deps
- meta: add github issue/pr templates
- meta: standardize travis config

# 2.0.0
- meta: update readme
- meta: standard --fix