@@ -138,6 +138,15 @@ class AOHost extends AsyncEventEmitter {
   }
 
   /**
+    * Fetch configured algorithmic orders
+    *
+    * @return {Array} aos
+    */
+  getAOs () {
+    return Object.values(this.aos)
+  }
+
+  /**
    * Returns the algo order definition identified by the provided ID
    *
    * @param {string} id - i.e. bfx-iceberg
